# ===================================================================
# CMAKE のおまじない
# ===================================================================
cmake_minimum_required (VERSION 3.12)


# C++14 の指定
set (CMAKE_CXX_STANDARD 14)

# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================
set ( YM_VERSION_MAJOR 1 )
set ( YM_VERSION_MINOR 0 )
set ( YM_VERSION ${YM_VERSION_MAJOR}.${YM_VERSION_MINOR} )
project ( ym-test VERSION "${YM_VERSION}" )

set ( CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/stage" )


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================
list ( APPEND CMAKE_MODULE_PATH
  "${PROJECT_SOURCE_DIR}/ym-common/cmake"
  )

# 自前のパッケージをインクルード
include ( YmUtils )

# よく使ういくつかのパッケージの検査を行う．
# このオプションでは bzip2, lzma, zlib, popt の検査も行う．
ym_init ( "USE_BZIP2" "USE_LZMA" "USE_ZLIB" "USE_POPT" )
ym_init_python ()
ym_init_cython ()
ym_init_gperftools ()
ym_init_ctest ()


# ===================================================================
# google-test は内蔵のものを使う．
# ===================================================================
ym_use_gtest ()


# ===================================================================
# ヘッダファイルの生成
# ===================================================================

# ===================================================================
# サブモジュールのリスト
# ===================================================================

set ( YM_SUBMODULE_LIST
  "ym-alloc"
  "ym-base"
  "ym-bfo"
  "ym-bnet"
  "ym-cell"
  "ym-codec"
  "ym-combopt"
  "ym-common"
  "ym-fraig"
  "ym-graph"
  "ym-logic"
  "ym-msg"
  "ym-mvn"
  "ym-sat"
  "ym-verilog"
  )


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

foreach ( dir ${YM_SUBMODULE_LIST} )
  add_subdirectory ( ${dir} )
endforeach ()


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  library ターゲットの設定
# ===================================================================


# ===================================================================
# python スクリプト用のインストールターゲット
# ===================================================================


# ===================================================================
# doxygen 起動用のコマンド
# ===================================================================
